--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ Flask-Migrate==2.2.1
 Flask-SQLAlchemy==2.3.2
 Flask-WTF==0.14.2
 pylint==1.9.2
-SQLAlchemy==1.2.8
+SQLAlchemy>=1.3.0
 Werkzeug==0.14.1
 WTForms==2.2.1
 pytest==3.6.3
